<resources>
    <string name="app_name">Games &amp; Rituals</string>
    <string name="destiny_Text">Choose a Chapter…</string>
    <string name="logo">logo</string>
    <string name="AcesingChapter">Accessing Chapter </string>
    <string name="PauseMusic">Music Paused </string>
    <string name="PlayMusic">Playing Music </string>
    <string name="privacy_policy">
        <a href="https://framedmemories.es/politica-de-privacidad/">Privacy Policy</a>
    </string>
    <string name="Type_Game">Game</string>
    <string name="Type_Ritual">Ritual</string>
    <string name="Title_1">1. Sever the cord</string>
    <string name="Title_2">2. The Picture</string>
    <string name="Title_3">3. Concentrate</string>
    <string name="Title_4">4. The Answer Man</string>
    <string name="Title_5">5. Charlotte´s Web</string>
    <string name="Title_6">6. The Red Book Game</string>
    <string name="Title_7">7. The Dark Music</string>
    <string name="Title_8">8. 11 Miles</string>
    <string name="Title_9">9. The Japanese New Year</string>
    <string name="Title_10">10. Dry Bones</string>
    <string name="Title_11">11. The Closet</string>
    <string name="Title_12">12. The Musical Chairs Alone</string>
    <string name="Title_13">13. The White Kimono</string>
    <string name="Title_14">14. The Corner</string>
    <string name="Title_15">15. A Small Radio</string>
    <string name="Title_16">16. Channel Infinity</string>
    <string name="Title_17">17. Tomino´s Hell</string>
    <string name="Title_18">18. The Man In the Fields</string>
    <string name="Title_19">19. Bed of Sorrow</string>
    <string name="Title_20">20. Lady Spades</string>
    <string name="Title_21">21. The Stranger Ritual</string>
    <string name="Title_22">22. The Apex</string>
    <string name="Title_23">23. The Knockertell</string>
    <string name="Title_24">24. The Raven Man</string>
    <string name="Title_25">25. The Gambler´s Game</string>
    <string name="Title_26">26. The Doors of your Mind</string>
    <string name="Title_27">27. The Hooded Man Ritual</string>
    <string name="Title_28">28. The Dark Reflection</string>
    <string name="Title_29">29. The Bath Game (Daruma-San)</string>
    <string name="Title_30">30. The Staircase Ritual</string>
    <string name="Title_31">31. 100 Ghost Stories</string>
    <string name="Title_32">32. The Candles Game</string>
    <string name="Title_33">33. The Hosting Game</string>
    <string name="Title_34">34. The Mirror Box</string>
    <string name="Title_35">35. Elevator to Another World</string>
    <string name="Title_36">36. The Dead Poet´s Game</string>
    <string name="Title_37">37. The Shoebox Telephone</string>
    <string name="Title_38">38. One-Man Hide and Seek Game</string>
    <string name="notas"><i><b>Important Notes</b></i></string>
    <string name="note0"> </string>
    <string name="note1b">This is a compendium of games and rituals taken from all of the internet.
    All the stuff can be consulted in several webpages and are completely free.\n\n
        We have gathered all of them here for you. Also, we´ve translated them in various languages.
    However, if you think something shouldn´t be here, please, send me an email to:
        <b>software@framedmemories.es</b>. \nWe will be pleased to assist you.</string>
    <string name="note1">Humans love horror and rugged situations. It´s a natural feeling.
        We love to play. Like most people. But, be careful. This rituals and games may not be
        for you. If you are easily terrified, this app isn´t for you.\n The content of this app
        may be very dangerous for you or your friends, so take it slowly and safe. We are not
        responsible for what may happen, under any circumstances.</string>
    <string name="note2"><i><b>Play at your own risk.</b></i></string>
    <string name="note3">Having say all this, <b>HAVE FUN! ;)\n\n\n\n</b>

        Do you like the app? Have you felt the fear? If you think the app is worth of it, please consider
        to help us by watching a small ad by pressing the image below and clic on it. Yes, we hate it, but it will
        help us for future app.\n
        THANK YOU VERY MUCH FOR YOUR HELP!</string>
    <string name="note4">\n\n\n MUSIC CREDITS\n\n

        <i>"Horror Drone #1"\n\n</i>
        <b>"Music by audionautix.com"</b>\n\n

        All images used are from Pexels.com.

        \n\nPlease contact me through this email:
        <b>software@framedmemories.es</b>

        \n\nDeveloped and translated by Pedro Luque \nVer. 1.7\nFramed Memories Software, 2018.\n\n\n


    </string>
    <string name="Game1Name"><b>Sever the cord</b></string>
    <string name="Game1Players"><b><u>PLAYERS</u></b>\n*One principal\n</string>
    <string name="Game1Requi"><b><u>REQUIREMENTS</u></b>\n*A mirror.\n*A dark room.\n*A light with a switch.\n</string>
    <string name="Game1Inst"><b><u>INSTRUCTIONS</u></b>\n\n
        1. Begin at any time. Night time is optimal.\n\n
        2. Prepare your room: Cover the windows securely; no light should shine through, whether streetlights
        or moonlight. Set up your mirror. Make sure your light and its switch are in working order.
        Leave the light on for now.\n\n
        3. Stand in front of your mirror.\n\n
        4. Look at your reflection in the mirror.\n\n
        5. It’s not your reflection. It’s your Copy. Look at your Copy in the mirror. Look your
        Copy in the eye.\n\n
        6. Know — don’t think; know — that you are not looking at yourself. Know that you are
        looking at perfect Copy of yourself. Know that you are bound to your Copy, and your Copy
        to you — but also that your Copy is distinct from you, a separate creature, a being all
        its own. Know this with every fiber of your being. Know that it is true.\n\n
        7.	When you have reached this moment of truth, turn off the lights.\n
        <b>NOTE: If you do not reach this moment of truth, DO NOT PROCEED.</b>\n\n
        8.	Wait.  There is no precise time to wait; simply wait until it feels right to wait no
        longer. Most players wait around two minutes. You might wait more. You might wait less.\n\n
        9.	Turn the lights back on:\n<u>If your reflection is still present:</u> The ritual has failed.
        It is NOT recommended that you try again.\n <u>If your reflection has vanished:</u> The ritual
        has succeeded. There will be no need to try again.\n\n

        <b><u>THE PRIZE</u></b>\n
        If the ritual has succeeded, you have severed the “cord” -the bond- between you and your
        Copy. Your Copy will no longer mirror your every move. You will no longer be watched. You
        may do as you please, and you will face no retribution for any of it.\n
        At the site of severance, the “cord” will begin to decay  -on one side, and one side only-.
        There is no telling which side will decay; it could be your side, or it could be your
        Copy’s side. Whichever side it is, upon reaching the You on that side, the decay begin to
        eat at that being’s soul. They will grow pale and weak, sickness tearing away at them from
        the inside out, cursing them to an eternity of shadows.\n\nIf your Copy falls to the decay,
        you will go free. \n\nIf the decay comes after you…\n…You will not.\n\n

        <b><u>CONCERNING THE COPY\n</u></b>Don’t assume that the Copy isn’t you.\n If you start to feel
        ill one day, like a shadow of yourself, look in the mirror.\n Is your reflection there?
        If not, the other You may have severed the cord…\n …And you’re the one who’s paying the price.
    </string>
    <string name="Game2Name"><b>The Picture</b></string>
    <string name="Game2Players"><b><u>PARTICIPANTS</u></b>\n*At least two participants.
        The more, the better. There is no principal.\n</string>
    <string name="Game2Requi"><b><u>REQUIREMENTS</u></b>\n*A length of string, rope, or other similar material.
        This length of string, rope, or other material should be long enough to make a circle when the ends are
        knotted together.\n
        *Scissors, a knife, or another sharp edge.\n
        *One small mirror per participant.\n
        *A camera with flash capabilities. <b>Camera phones are NOT recommended.</b>\n
        *A drinking glass.\n
        *A beverage, preferably alcoholic. Wine is recommended.\n
        *A quiet room.\n\n</string>
</resources>